# emit

./: .gitignore  EMIT-stac.ipynb  MANIFEST.in  Makefile  README.rst  check-s3.ipynb  db-setup.md  dev-env.yaml  earthdata-s3-creds.py  emit-data.ipynb  emit-scratch.ipynb  notes.md  pyproject.toml  setup.cfg
notebooks/: .gitignore  av3-dc-indexing.ipynb  av3-dc-load.ipynb  av3-to-zarr.ipynb  av3-zarr-review.ipynb  av3.yaml  check-dc.ipynb  check-netcdf.ipynb  collect-stac-md.ipynb  collect-xyz-samples.ipynb  convert-to-stac.ipynb  emit.yaml  hs-emit-example.ipynb  review-xyz-samples.ipynb  scratch-fsspec.ipynb  setup-py-env.sh  zzz_scratch-rpcs.ipynb
notebooks/trash/: check-netcdf.ipynb  collect-xyz-samples.ipynb  convert-to-stac.ipynb  emit-scratch-error-analysis.ipynb
notebooks/utils/: gcps.py  txt.py
odc/av3/: __init__.py  _reader.py
odc/emit/: __init__.py  __main__.py  _check.py  _creds.py  _emit.py  _gcps.py  _load.py  _md.py  _plots.py  _reader.py  _version.py  _zict.py  conftest.py  gcps.py  test_md.py  test_reader.py
odc/emit/assets/: __init__.py  coords.npz
odc/emit/test_data/: emit_l2a_rfl_sample.cmr.json  emit_l2a_rfl_sample.dmrpp
products/: emit.yaml
scripts/: db.sh  earthdata-s3-creds.py  setup-py-env.sh  update-libs.sh
tests/: test_md.py
utils/: _md.py  emit.py  txt.py
