[metadata]
name = odc-emit
description = TODO: emit 
version = 0.1.0 
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/x-rst
long_description = file: README.rst
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-emit/
project_urls =
   Documentation = https://odc-emit.readthedocs.io/en/latest/
   Bug Reporting = https://github.com/opendatacube/odc-emit/issues

classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS
    Typing :: Typed

[options]
include_package_data = True
zip_safe = False
packages = find_namespace:
python_requires = >=3.10
install_requires =
    odc-geo[xr,warp]
    toolz
    numpy
    zarr
    xarray
    fsspec
    dask
    matplotlib
    zict
    setuptools
    affine

[options.extras_require]
test =
    pytest
    geopandas
    dask


[options.packages.find]
include =
  odc*
